# template

./: .cursorignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pr.yml  👷Flow.yml
.requirements/: requirements.txt
tests/: test_unit.py
